--- a/图论/网络流.md
+++ b/图论/网络流.md
@@ -3,31 +3,29 @@
 最慢应该是O((n^2)*m)，n表点数，m表边数
 
 ```c++
-#include<stdio.h>
-#include<iostream>
-#include<string.h>
-#include<queue>
-using namespace std;
 const int MAXN = 2010;//点数的最大值
 const int MAXM = 1200010;//边数的最大值
 const int INF = 0x3f3f3f3f;
+//to是边的终点，next是指向的下一条边，cap是该边能承受的流量，flow是实际上流过的流量 
 struct Edge{
 	int to,next,cap,flow;
 }edge[MAXM];//注意是 MAXM
-int tol;
-int head[MAXN];
+int tol;//边的总数 
+int head[MAXN];//出发点为i的最后一条边在edge数组中的下标 
 void init(){
-	tol = 2;
-	memset(head,-1,sizeof(head));
+	tol = 2;//注意从2开始，遍历边的时候要从2，源点汇点的值不受影响，该设啥设啥 
+	memset(head,-1,sizeof(head));//遍历的时候for(int i=head[u];~i;i=edge[i].next) 
 }
-void addedge(int u,int v,int w,int rw = 0){
+void addedge(int u,int v,int w,int rw = 0){//w是正向边的流量，rw是反向边初始化为0 
 	edge[tol].to = v; edge[tol].cap = w; edge[tol].flow = 0;
 	edge[tol].next = head[u]; head[u] = tol++;
 	edge[tol].to = u; edge[tol].cap = rw; edge[tol].flow = 0;
 	edge[tol].next = head[v]; head[v] = tol++;
 }
+//数组实现的队列
 int Q[MAXN];
-int dep[MAXN],cur[MAXN],sta[MAXN];
+//dep是深度数组，cur是记录当前点u循环到了哪一条边，sta 
+int dep[MAXN],cur[MAXN],sta[MAXN]; 
 bool bfs(int s,int t,int n){
 	int front = 0,tail = 0;
 	memset(dep,-1,sizeof(dep[0])*(n+1));
@@ -50,51 +48,36 @@ int dinic(int s,int t,int n){
 	int maxflow = 0;
 	while(bfs(s,t,n)){
 		for(int i = 0;i < n;i++)cur[i] = head[i];
-			int u = s, tail = 0;
-			while(cur[s] != -1){
-				if(u == t){
-					int tp = INF;
-					for(int i = tail-1;i >= 0;i--)tp = min(tp,edge[sta[i]].cap-edge[sta[i]].flow);
-					maxflow += tp;
-					for(int i = tail-1;i >= 0;i--){
-						edge[sta[i]].flow += tp;
-						edge[sta[i]^1].flow -= tp;
-						if(edge[sta[i]].cap-edge[sta[i]].flow == 0)tail = i;
-					}
-					u = edge[sta[tail]^1].to;
+		int u = s, tail = 0;
+		while(cur[s] != -1){
+			if(u == t){
+				int tp = INF;
+				for(int i = tail-1;i >= 0;i--)tp = min(tp,edge[sta[i]].cap-edge[sta[i]].flow);
+				maxflow += tp;
+				for(int i = tail-1;i >= 0;i--){
+					edge[sta[i]].flow += tp;
+					edge[sta[i]^1].flow -= tp;
+					if(edge[sta[i]].cap-edge[sta[i]].flow == 0)tail = i;
 				}
-				else if(cur[u] != -1 && edge[cur[u]].cap > edge[cur[u]].flow && dep[u] + 1 == dep[edge[cur[u]].to]){
-					sta[tail++] = cur[u];
-					u = edge[cur[u]].to;
-				}
-				else {
-					while(u != s && cur[u] == -1)
-					u = edge[sta[--tail]^1].to;
-					cur[u] = edge[cur[u]].next;
-				}
+				u = edge[sta[tail]^1].to;
 			}
+			else if(cur[u] != -1 && edge[cur[u]].cap > edge[cur[u]].flow && dep[u] + 1 == dep[edge[cur[u]].to]){
+				sta[tail++] = cur[u];
+				u = edge[cur[u]].to;
+			}
+			else {
+				while(u != s && cur[u] == -1)
+				u = edge[sta[--tail]^1].to;
+				cur[u] = edge[cur[u]].next;
+			}
+		}
 	}
  	return maxflow;
 }
-int main(){
-	int n,m,t,cas=1,u,v,w;
-	scanf("%d",&t);
-	while(t--){
-		scanf("%d%d",&n,&m);
-		init();
-		for(int i=0;i<m;i++){
-			scanf("%d%d%d",&u,&v,&w);
-			addedge(u,v,w,0);
-		}
-		int ans=dinic(1,n,n);
-		printf("Case %d: %d\n",cas++,ans);
-	} 
-	return 0;
-}
 ```
 
-
-
 ## 2 注意的点
-* 源点设置为0会出错
-* 
+* [板子来源]kuangbin dinic模板
+* 该板子边集的起点为2
+* i和i^1 是一个连续的奇偶对，假如i为3，则i^1为4；假如i为4，则i^1为3
+* 自己实现的队列和没有用dfs
