--- a/数论/板子.md
+++ b/数论/板子.md
@@ -1,4 +1,12 @@
-# 素性检测
+# 素数
+
+* 所有大于2的素数都可以唯一地表示成两个平方数之差。
+
+* 当n为大于2的整数时，$2^n+1$和$2^n-1$两个数中，如果其中一个数是素数，那么另一个数一定是合数。
+
+* 孪生素数：3和5等。
+
+## 素性检测
 
 * 结合哥德巴赫猜想，两个大于2的偶数=两个质数相加(偶数的范围可以达到$10^{18}$) 当质数很大，难用常规方法判断。
 
@@ -55,3 +63,39 @@
   }
 ```
 
+# 对数的敏感性
+
+* log(2)=0.693147
+
+* $sqrt(2)=1.414$ $sqrt(3)=1.732$
+
+* 被9整除 $k*(10^x-1)$
+
+# 调和级数 欧拉公式
+
+* 在n较小的时候没有公式，当n较大(大于一万)
+
+  $f(n)=ln(n)+C+1/(2*n)$ 
+ 
+  $C≈0.57721566490153286060651209$ 
+
+  ```c++
+  //对数函数y = lnx的表示方法为log
+  f=C+log(n)+1.0/(2.0*n);
+  ```
+
+# RSA
+
+* 选取大素数p、q，计算乘积n=p*q
+
+* 根据欧拉函数$r=Phi(n)=Phi(p)*Phi(q)=(p-1)*(q-1)$
+
+* 选择一个小于r并与r互质的整数e，求得e关于r的模反元素，命名为d（ed = 1(mod r)模反元素存在，当且仅当e与r互质），e我们通常取65537。
+
+* e、n公开，d私钥。
+
+    ​A明文，B密文 
+    
+    $A=B^d mod n$ 
+
+    $B=A^e mod n$
