--- a/数论/板子.md
+++ b/数论/板子.md
@@ -1,5 +1,42 @@
+# 等比数列
+
+* 等比数列求和
+![等比数列求和](images/等比.png)
+
+$∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定互质而且p不一定为质数
+
+* 分治
+  
+  (1) 1+q1+q2+…+qn fun(n,q)
+      ![分治1](images/分治1.png)
+  (2) q1+q2+…+qn (fun(n,q)%p+1%p)%p
+      ![分治2](images/分治2.png)
+
+* 求逆元
+
+  $(q^{n+1}-1)/(q-1) modp=((q^{n+1}-1) modp*inv(q-1))modp$
+
+  求逆元的方法：
+
+  (1)线性打表法（数组有限）
+  ![线性打表求逆元](images/线性打表求逆元.png)
+
+  (2) 费马小定理：p是质数而且q，p互质 $inv(q)=(q^{(p-2)})modp$
+
+  (3) 欧拉定理：q，p互质 $inv(q)=q^{φ(p)-1} modp$ 线性打表求欧拉，数组有限
+
+  (4) 拓展欧几里得：q，p互质
+  ![拓展欧几里得](images/拓展欧几里得.png)
+
+  逆元不存在，即意味着gcd(b,p)!=1：(a/b)modp=(amod(bp))/b
+  
+  等比数列的逆元不存在：$((q^{n+1}-1)/(q-1)) modp$ 即q-1%p=0 即q%p=1 则等比数列1+q1+q2+…+qn的每一项%p=1，一共有n+1项，所以求余的结果是n+1（限制条件：p一定是质数的时候，当q-1能整除p可用）
+
+
 # 素数
 
+* 素数分布
+  ![prime](images/prime.jpeg)
 * 所有大于2的素数都可以唯一地表示成两个平方数之差。
 
 * 当n为大于2的整数时，$2^n+1$和$2^n-1$两个数中，如果其中一个数是素数，那么另一个数一定是合数。
@@ -84,7 +121,9 @@
   f=C+log(n)+1.0/(2.0*n);
   ```
 
-# RSA
+# 加解密
+
+## RSA
 
 * 选取大素数p、q，计算乘积n=p*q
 
@@ -99,3 +138,512 @@
     $A=B^d mod n$ 
 
     $B=A^e mod n$
+
+# 质因子分解
+
+* n = $p1^{a1}$ x $p2^{a2}$ x … x $pk^{ak}$ 其中，pi是n的质因子
+
+* 复杂度：质数等于O(sqrt(n))(优化：先打好素数表，是素数就跳出)，合数小于O(sqrt(n))
+
+```c++
+typedef long long ll;
+int fac[maxn],cnt[maxn];
+int getFac(ll n){
+	int num=0,sum=0,m=sqrt(n+0.5);
+	for(int k=2;k<=m;k++){
+		sum=0;
+		while(n%k==0){
+			n/=k;sum++;
+		}
+		if(sum!=0){
+			fac[num]=k;
+			cnt[num++]=sum;
+		}
+		m=sqrt(n+0.5);
+	}
+	if(n!=1){
+		fac[num]=n;
+		cnt[num++]=1;
+	}
+	return num;
+}
+```
+
+* 因子总个数 $D = (a1+1) * (a2+1) * … * (ak+1)$
+
+* 因子之和 $S = Π[ 1 + pi + pi^2 + … + pi^{ai}]$
+  
+* 阶乘的因子分解：给定正整数n，求n!的因子分解式中质因子p的数量，可以用以下公式求解：$S(p)=Σ[n/p+n/(p^2)+n/(p^3)+…+n/(p^k)]$，其中p^k<=n，时间复杂度为O(log(n))。
+
+
+# GCD & LCM
+
+## GCD的性质
+
+* (1.结合律) GCD(a,b,c)=GCD(GCD(a,b),c)
+* (2.区间) GCD(al,…,ar)=GCD(GCD(al,…,am-1),GCD(am,…,ar))
+* (3.分配律) GCD(k*a,k*b)=k*GCD(a,b)
+* (4.互质) 若GCD(a,b)=p，则a/p与b/p互质
+* (5.线性变换) GCD(a+k*b,b)=GCD(a,b)
+* (6.因子分解) GCD(a,b)=$Π[pi^{min(ai,bi)}]$
+
+```c++
+int gcd(int a,int b){
+	return b==0?a:gcd(b,a%b);
+}
+```
+
+## LCM的性质
+
+* (1.结合律) LCM(a,b,c)=LCM(LCM(a,b),c)
+* (2.分配律) LCM(k\*a,k\*b)=k*LCM(a,b)
+* (3.因子分解) LCM(a,b)=$Π[pi^{max(ai,bi)}]$
+
+# 欧拉函数
+
+* φ(n)表示所有小于正整数n并且与n互质的正整数的个数
+* φ(n) = $Π[ pi^{(ai-1)} ] * Π[ pi-1 ]$
+* (性质 1) 对任意正奇数n，φ(n)=φ(2*n)，特别规定φ(1)=1
+* (性质 2) 对任意质数n，φ(n)=n-1，$φ(n^k)=(n-1)*n^{(k-1)}$
+* (性质 3) 对于正整数n的所有因子di，有Σ[φ(di)]=n
+* 积性性质：若a,b互质，则有φ(a\*b)=φ(a)*φ(b)
+* 有若p为质数，则$φ(p^k)=p^k-p^{(k-1)}=p^k*(1-1/p)$
+
+* 复杂度：O(sqrt(n))
+
+```c++
+int Euler(int n){
+	int ret=n;
+	for(int i=2;i<=sqrt(n);i++){
+		if(n%i==0){
+			ret=ret/i*(i-1);
+			while(n%i==0)n/=i;
+		}
+	}
+	if(n>1)ret=ret/n*(n-1);
+	return ret;
+}
+```
+
+## 欧拉函数线性筛
+
+* 复杂度O(n)
+
+```c++
+const int MAXN=1e7,MAXP=1e6;
+int prime[MAXP+10],check[MAXN+10],phi[MAXN+10],num=0;
+void GetPhi(){
+	phi[1]=1;
+	memset(check,0,sizeof(check));
+	for(int i=2;i<MAXN;i++){
+		if(!check[i]){
+			prime[num++]=i;phi[i]=i-1;//素数 
+		}
+		for(int j=0;j<num;j++){
+			if(i*prime[j]>MAXN) break;
+			check[i*prime[j]]=1;
+			if(i%prime[j]==0){ //i mod p = 0, 那么phi(i * p)=p * phi(i)
+				phi[i*prime[j]]=phi[i]*prime[j];break;
+			}
+			else{
+				phi[i*prime[j]]=phi[i]*(prime[j]-1); //phi(prime[j])=prime[j]-1
+			}
+		} 
+	}
+	return;
+}
+```
+
+# 模运算
+
+## 快速幂求模
+```c++
+long long qPow(long long b,long long p,long long k){
+	long long a=b,ans=1;
+	while(p){
+		if(1&p)ans=(ans*a)%k;
+		a=(a*a)%k;
+		p>>=1;
+	}
+	return ans%k;
+}
+```
+
+* 性质
+  1. (a+b)%p=(a%p+b%p)%p
+  2. (a-b)%p=(a%p-b%p+p)%p
+  3. (a*b)%p=((a%p)*(b%p))%p
+  4. (a/b)%p=((a%p)*inv(b))%p，其中inv(b)表示b%p的逆元
+
+* 求正整数a在模mod下逆元的方法
+  1. 线性打表法 (只要求mod是质数，时间复杂度O(n))
+  2. 费马小定理 (要求mod是质数且与a互质，快速幂优化)
+  3. 欧拉定理 (只要求a与mod互质，需要欧拉函数与快速幂)
+  4. 拓展欧几里德 (只要求a与mod互质，时间复杂度O(log(n)))
+
+
+# 同余方程
+
+## 线性同余方程
+
+* 线性同余方程：a*x≡b(mod n)
+* 拓展欧几里德定理：对于不完全为0的非负整数a和b，必定存在整数对(x,y)，使等式a\*x+b\*y=gcd(a,b)成立
+* 求二元一次不定方程a\*x+b\*y=c的整数解。
+  
+  当且仅当c%gcd(a,b)=0时，不定方程存在整数解。
+  
+  特别注意：若不定方程存在整数解，则整数解有无穷多组，拓展欧几里德只能求出其中的一组解，并且求出的解可能是负的。
+  
+  通解的求法：若(x0,y0)是线性方程a\*x+b\*y=c的一组特解，那么对于任意的整数t，(x0+(b/gcd(a,b))\*t,y0-(a/gcd(a,b))*t)都是线性方程的解。
+
+  ![拓展欧几里得求解线性方程](images/拓展欧几里得求解线性方程.png)
+
+* 求线性同余方程a*x≡b(mod n)的最小正整数解。
+  
+  解法：首先将方程改写为a*x-n*y=b的形式，然后使用拓展欧几里德求出一组特解(x0,y0)。
+  
+  题目要求找到最小的正整数解，可以令k=n/gcd(a,n)，这样x的最小正整数解可以通过表达式x=(x0%k+k)%k求出。（x0可能是负数）
+
+  ![拓展欧几里得求解同余方程](images/拓展欧几里得求解同余方程.png)
+
+
+## 二次同余方程
+
+* Let p = 1000000007. Given two integers b and c, please find two integers x and y(0≤x≤y<p)(0≤x≤y<p), such that (x+y)modp=b 和 (x×y)modp=c 可将题目转化为 x^2-bx+c=0(mod p)求出在模p情况下的二次方程的根
+* 欧拉准则
+  
+  等于1一定有解，等于0可能有，等于-1（或者在求余意义下的其他值）一定没有解
+  ![euler-criterion](images/euler-criterion.png)
+  ![euler](images/euler.png)
+
+# 中国剩余定理
+
+* 设正整数N满足线性同余方程组N≡ai(mod pi)，其中 1<=i<=n，pi两两互质，则$N=Σ[ai*Wi*inv(Wi,pi)]%M$。
+其中，$M=Πpi=p1*p2*……*pn$，$Wi=M/pi$，$inv(Wi,pi)$表示Wi在模pi下的逆元。
+![中国剩余定理](images/中国剩余定理.png)
+
+## 拓展中国剩余定理
+
+```c++
+//luogu P4777
+//first pass luogu & niuke
+#include<stdio.h>
+#include<iostream>
+using namespace std;
+const int maxn=1e5+5;
+typedef __int128 ll;
+int n;
+ll a[maxn],b[maxn];
+int scan(ll &x){
+    x=0;int sgn=1;
+    char ch;
+    while(ch=getchar()){
+        if(ch==EOF)return EOF;
+        else if(ch=='-')sgn=-sgn;
+        else if(ch>='0'&&ch<='9'){
+            x=x*10+(ch-'0');break;
+        }
+    }
+    while((ch=getchar())>='0'&&ch<='9')x=x*10+(ch-'0');
+    x*=sgn;return 1;
+}
+void _print(ll x){
+    if(x>9)_print(x/10);
+    putchar(x%10+'0');
+}
+void print(ll x){
+    if(x<0){x=-x;putchar('-');}
+    _print(x);
+}
+//a*x+b*y=gcd(a,b)
+ll exgcd(ll a,ll b,ll &x,ll &y){
+    if(a==0&&b==0)return -1;
+    if(b==0){x=1;y=0;return a;}
+    ll d=exgcd(b,a%b,y,x);
+    y-=a/b*x;
+    return d;
+}
+//china
+ll excrt(){
+    ll x,y,aa,bb,gcd;
+    ll m=a[0],ans=b[0];//a[] divide b[] mod
+    for(int i=1;i<n;i++){
+        aa=a[i],bb=b[i];
+        bb=((bb-ans)%aa+aa)%aa;
+        gcd=exgcd(m,aa,x,y);
+        if(bb%gcd)return -1;
+        x=x*(bb/gcd)%(aa/gcd);
+        x=(x+aa)%(aa/gcd);//change the sgn of x, because x maybe - change to +
+        ans+=x*m;
+        m=m/gcd*aa;
+    }
+    return ans;
+}
+int main(){
+    scanf("%d",&n);
+    for(int i=0;i<n;i++)scan(a[i]),scan(b[i]);
+    print(excrt());
+    return 0;
+}
+
+//extra method
+//china x=ai(mod bi) a[] mod b[] divider 
+ll excrt(){
+    ll x,y,a0=a[0],b0=b[0],a1,b1,gcd;
+    for(int i=1;i<n;i++){
+        a1=((a[i]-a0)%b[i]+b[i])%b[i],b1=b[i];
+        gcd=exgcd(b0,b1,x,y);
+        if(a1%gcd)return -1;
+        x=x*(a1/gcd)%b1;
+        a0+=x*b0;
+        b0*=b1/gcd;// b0 finally will be the lcm of all numbers
+        a0=(a0+b0)%b0;//change the sgn of a0
+    } 
+    return a0;
+}
+
+//niuke https://ac.nowcoder.com/acm/contest/890/D
+//second pass luogu & niuke
+#include<stdio.h>
+#include<iostream>
+using namespace std;
+const int maxn=1e2+5;
+typedef __int128 ll;
+int n;
+ll a[maxn],b[maxn];
+int scan(ll &x){
+    x=0;
+    int sgn=1;
+    char ch;
+    while(ch=getchar()){
+        if(ch==EOF)return EOF;
+        else if(ch=='-')sgn=-sgn;
+        else if(ch>='0'&&ch<='9'){
+            x=x*10+(ch-'0');break;
+        }
+    }
+    while((ch=getchar())>='0'&&ch<='9')x=x*10+(ch-'0');
+    x*=sgn;return 1;
+}
+void _print(ll x){
+    if(x>9)_print(x/10);
+    putchar(x%10+'0');
+}
+void print(ll x){
+    if(x<0){x=-x;putchar('-');}
+    _print(x);
+}
+ll exgcd(ll a,ll b,ll &x,ll &y){
+    if(a==0&&b==0)return -1;
+    if(b==0){x=1;y=0;return a;}
+    ll d=exgcd(b,a%b,y,x);
+    y-=a/b*x;
+    return d;
+}
+ll excrt(){
+    ll a1=b[0],n1=a[0],a2,n2,d,x,y,gcd;
+    //if(a1==0)a1=a[0]; require positive number, so 0 is not correct
+    for(int i=1;i<n;i++){
+        a2=b[i];n2=a[i];
+        d=a2-a1;
+        gcd=exgcd(n1,n2,x,y);
+        if(d%gcd)return -1;
+        x=((x*d/gcd)%(n2/gcd)+(n2/gcd))%(n2/gcd);//k1=x*(d/gcd),k1=(k1%(n2/gcd)+(n2/gcd))%(n2/gcd)
+        a1=x*n1+a1;//a1+k1*n1
+        n1=n1*n2/gcd;//lcm(n1,n2)
+    }
+    return a1;
+}
+int main(){
+    scanf("%d",&n);
+    ll num;scan(num);
+    for(int i=0;i<n;i++)scan(a[i]),scan(b[i]);
+    ll ans=excrt();
+    if(ans==-1)puts("he was definitely lying");
+    else if(ans>num)puts("he was probably lying");
+    else print(ans);
+    return 0;
+}
+
+
+
+ll exgcd(ll a,ll b,ll &x,ll &y){
+    //cout<<"hh"<<endl;
+//  if(a==0&&b==0) return -1;
+    ll t,res;
+    if(b==0){
+        x = 1;
+        y = 0;
+        return a;
+    }
+    res = exgcd(b,a%b,x,y);
+    t = x;
+    x = y;
+    y=t - a/b*y;
+    return res;
+ 
+}
+ll excrt(){
+    //cout<<"hh"<<endl;
+    int flag ;
+    flag = 0;
+    ll b1=b[0],a1=a[0],b2,a2,k1,k2,x0,gcd,c;
+    ll t;
+    for(int i=1;i<n;i++){
+        b2=b[i],a2=a[i];
+        c=b2-b1;
+        gcd=exgcd(a1,a2,k1,k2);//解得：n1*k1+n2*k2=gcd(n1,n2)
+        if(c%gcd){
+            flag=1;
+            //return -1;//无解
+            break;
+        }
+        x0 = k1;
+        k1=k1*c/gcd;//n1*x0+n2*(c/gcd*k2)=c  PS:k1/gcd*c错误！
+        t=a2/gcd;
+        k1=(k1%t+t)%t;//求n1*x0+n2*y=c的x0的最小解
+        b1=a1*k1+b1;
+        a1=a1*a2/gcd;
+        //b1 = (b1%a1+a1)%a1;
+   }
+    //int res = (int )((N-a1)/n1+(a1==0?0:1));
+  
+    //int ans  = (N-b1)/a1 + (b1==0? 0:1);
+    //int ans = 125;
+    if(flag==1) b1 = -1;
+    //cout<<"hh"<<endl;
+    if(b1==0&&n>1) {
+        b1 = a1;
+    }
+    //if(b1==0&&n==1) b1 =a[0];
+    return b1;
+ 
+}
+```
+
+# 四色猜想
+
+任何一张地图只用四种颜色就能使具有共同边界的国家着上不同的颜色
+
+# 费马大定理
+
+当整数n >2时，关于x, y, z的方程 $x^n + y^n = z^n$ 没有正整数解
+
+# 康威常数
+
+![conway](images/conway.png)
+
+# 实数域不可拆分多项式只有两种：一次多项式和二次的(b^2<4ac)
+
+*求多项式anx^n+an-1x^(n-1)+…+a1x+a0在实数域上是否可约？n=1，不可约；n=2，根的判别式；n=3，一定实数解（不算虚根i），可以有根号
+
+* 艾森斯坦因判别法：有理数域不可约，即一定要整数解
+  ![艾森斯坦因判别法](images/艾森斯坦因判别法.png)
+
+# 阶乘
+
+## 阶乘的位数
+
+* 自己模拟(int)log10(number)+1
+  ![my-ca-string](images/my-cal-string.png)
+* 斯特林公式(n=0需要特判，无法求出)
+  * 写法（pi和e一定要取多一点，不然会有精度问题，对精度要求高）
+  * double PI=acos(double(-1)); 反余弦函数 -1.0为pi，1为0
+  * double e=exp(double(1));
+  ![string](images/string.png)
+  ![string-code](images/string-code.png)
+
+## 阶乘求模
+
+(((n!)!)!)%p=? 阶乘求模
+
+	1. 1!!=1
+	2. 2!!=2
+	3. 3!!=720
+	4. 4!!=620448401733239439360000
+	5. 5!!很大
+   
+所以前面特判，后面的一定能够整除p
+
+* 阶乘末尾0的个数
+  * 10！=3,628,800 
+  * 20! =2432902008176640000
+  * 25!末尾有6个0
+
+* 阶乘算到几位会爆long long n=20的时候会变成负数
+
+# 斐波那契数列
+
+f(n)=f(n-1)+f(n-2)
+
+	1. 递推的方法能够求到80多项，太多无法用long long储存
+	2. 递归的方法求能够很快到40多项，时间复杂度高
+
+* 斐波那契因子
+  ![fabo-coef](images/fibo-coef.png)
+
+# 日期转换星期
+
+* 基姆拉尔森计算公式
+Week = (d+2*m+3*(m+1)/5+y+y/4-y/100+y/400+1) mod 7；
+
+0-星期日，1-星期一，2-星期二，3-星期三，4-星期四，5-星期五，6-星期六
+
+其中： d为几号，m为月份，y为年份，注：把一月和二月看为是上一年的十三月和十四月
+
+```c++
+int check(int y, int m, int d)
+ {      
+   if (m == 1 || m == 2) m += 12, y = y - 1;
+   return (d + 2 * m + 3 * (m + 1) / 5 + y + y / 4 - y / 100 + y / 400 ) % 7; } 
+```
+
+* 蔡勒公式
+
+1582年10月4日后：w = (d + 1+ 2*m+3*(m+1)/5+y+y/4-y/100+y/400)%7;
+
+1582年10月4日前：w = (d+1+2*m+3*(m+1)/5+y+y/4+5) % 7;
+
+或者1752年9月3日为例
+1752年9月3日后：w = (d + 2*m+3*(m+1)/5+y+y/4-y/100+y/400)%7; 
+
+比上面的少1 说明 6-星期日，0-星期一，1-星期二，2-星期三，3-星期四，4-星期五，5-星期六
+
+1752年9月3日前：w = (d+2*m+3*(m+1)/5+y+y/4+5) % 7;
+
+注：罗马教皇决定在1582年10月4日后使用格利戈里历法；而英国则是在1752年9月3日后才接受使用格利戈里历法。
+
+注意：
+当年的1,2月要当成上一年的13,14月进行计算
+
+
+```c++
+int celar(int y, int m, int d)
+{
+	if (m == 1 || m == 2) {
+		m += 12, y--;
+	}
+	int c = y / 100;
+	y = y % 100;
+	int w = (c/4-2*c+y+y/4+13*(m+1)/5+d-1) % 7;
+	return (w % 7 + 7) % 7;
+}
+```
+
+# 矩阵快速幂
+
+* 一些推导
+  ![matrix1](images/matrix1.png)
+  ![matrix2](images/matrix2.png)
+
+* 建立矩阵
+  ![startmatrix](images/satrt-matrix.png)
+* 初始化矩阵
+  ![setmatrix](images/set-matrix.png)
+* 矩阵相乘
+  ![mulmatrix](images/mul-matrix.png)
+* 矩阵快速幂
+  ![qPowmatrix](images/qPow-matrix.png)
+* 矩阵乘法
+  ![matrixmulmatrix](images/matrixmulmatrix.png)
+  
