--- a/数论/数论板子.md
+++ b/数论/数论板子.md
@@ -818,3 +818,13 @@ int celar(int y, int m, int d)
 
 * 求解线性方程组Ax=B，已知关于x=(X1,X2,…,Xn)的n个线性方程组，求方程组的解向量x
 * 时间复杂度O(n^3)
+* 高斯消元
+    ![高斯消元](images/高斯消元.png)
+* 模板
+![高斯消元1](images/高斯消元1.png)
+![高斯消元2](images/高斯消元2.png)
+![高斯消元3](images/高斯消元3.png)
+![高斯消元4](images/高斯消元4.png)
+
+## 取模问题
+* 要求6/4输出2，ans=(n-1)/k+1;
