--- a/数论/数论板子.md
+++ b/数论/数论板子.md
@@ -828,3 +828,48 @@ int celar(int y, int m, int d)
 
 ## 取模问题
 * 要求6/4输出2，ans=(n-1)/k+1;
+
+# 条件概率
+
+* 条件概率
+  * 在已知事件B发生的条件下，A发生的概率，记为P(A|B)。计算公式：P(A|B)=P(AB)/P(B)
+  * 全概率公式：P(A)=P(B1)xP(A|B1)+…+P(Bn)xP(A|Bn)。B1,…,Bn是互不相容的事件，且U(B1,…,Bn)=全集Ω
+
+# 期望
+
+* 性质
+    1. E(c)=0，其中c为任意常数
+    2. E(a\*X)=a*E(X)，其中a为任意常数。
+    3. E(a\*X+b\*Y)=a\*E(X)+b*E(Y)，期望的线性性 
+
+## 期望的线性性
+
+* 期望的线性性
+	* 随机游走(链和图)
+	1. 一个长度为n的链，从一端走到另一端的期望时间？设dp[i]表示从i第一次到i+1所需要的期望时间，则dp[i]=1/2+1/2*(1+dp[i-1]+dp[i]) 得dp[i]=dp[i-1]+2。dp[1]=1（1到2只能前进）。ans=dp[1]+dp[2]+……+dp[n-1]=(n-1)^2
+
+	2. N个点的完全图，问从S走到T的期望时间？ans=1/(n-1)+(n-2)/(n-1)\*(ans+1)得1/(n-1)*ans=1得ans=n-1。
+
+
+例题3：有n(n<=20)个格子，每次会涂一个格子，其中涂第i个格子的概率是p_i（保证∑p_i=1）。求每个格子都被涂色的期望次数。（类似的例题：HDU 4336）
+
+状压dp+概率：二进制1认为当前格子已经被涂色。dp[1<<n-1]=0,dp[0]为所求的答案。
+
+转移：从0开始转移。
+
+```c++
+int sum=(1<<n)-1;
+dp[sum]=0;//涂满的期望次数为0
+for(int i=sum-1;i>=0;i--){
+	dp[i]=1;
+	double tmp=0;
+	for(int j=0;j<n;j++){
+		if((i&(1<<j))==0){
+			dp[i]+=dp[i+(1<<j)]*p[j];
+			tmp+=p[j];
+		}
+	}
+	dp[i]/=tmp;
+}
+cout<<dp[0]<<endl;
+```
