--- a/图论/网络流.md
+++ b/图论/网络流.md
@@ -79,5 +79,5 @@ int dinic(int s,int t,int n){
 ## 2 注意的点
 * [板子来源]kuangbin dinic模板
 * 该板子边集的起点为2
-* i和i^1 是一个连续的奇偶对，假如i为3，则i^1为4；假如i为4，则i^1为3
+* i和i^1$ 是一个连续的奇偶对，假如i为3，则i\^1为4；假如i为4，则i\^1为3
 * 自己实现的队列和没有用dfs
