--- a/数论/数论板子.md
+++ b/数论/数论板子.md
@@ -7,9 +7,9 @@ $∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定
 
 * 分治
   
-  (1) 1+q1+q2+…+qn fun(n,q)
+  (1) 1+q1+q2+…+qn -> fun(n,q)
       ![分治1](images/分治1.png)
-  (2) q1+q2+…+qn (fun(n,q)%p+1%p)%p
+  (2) q1+q2+…+qn -> (fun(n,q)%p+1%p)%p
       ![分治2](images/分治2.png)
 
 * 求逆元
@@ -42,6 +42,81 @@ $∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定
 * 当n为大于2的整数时，$2^n+1$和$2^n-1$两个数中，如果其中一个数是素数，那么另一个数一定是合数。
 
 * 孪生素数：3和5等。
+
+## 素数的求法
+
+* 时间复杂度O(n*sqrt(n))
+  ```c++
+    bool isprime(int n)
+    {
+        int i;
+        for(i=2;i<=sqrt(n);i++)
+            if(n%i==0)
+                return false;
+        return true;
+    }
+  ```
+* 普通筛——埃拉托斯特尼(Eratosthenes)筛法:时间复杂度O(nloglogn)
+  ```c++
+    bool vis[maxn+5];
+    void isprime()
+    {
+        memset(vis,0,sizeof(vis));
+        for(int i=2;i<=maxn;i++)
+        {
+            if(!vis[i])
+            {
+                for(int j=2;j*i<=N;j++)
+                    vis[i*j]=false;
+            }
+        }
+    }
+  ```
+
+  或者
+
+  ```c++
+    bool vis[maxn+5];
+    void isprime()
+    {
+        memset(vis,0,sizeof(vis));
+        for(int i=2;i<=sqrt(N);i++)
+        {
+            if(!vis[i])
+            {
+                for(j=i*i;j<=N;j+=i)
+                    vis[j]=false;
+                //二次筛选法:i是素数，则下一个起点是i*i,把后面的所有的i*i+2*n*i筛掉
+            }
+        }
+    }
+  ```
+
+* 线性筛——欧拉Euler筛:时间复杂度为O(n)
+  ```c++
+    /* prime[]数组中的素数是递增的,当i能整除prime[j]，那么i*prime[j+1]这个合数肯定被prime[j]乘以某个数筛掉。
+   因为i中含有prime[j],prime[j]比prime[j+1]小，即i=k*prime[j]，那么i*prime[j+1]=(k*prime[j])*prime
+   [j+1]=k’*prime[j]，接下去的素数同理。所以不用筛下去了。因此，在满足i%prime[j]==0这个条件之前以及第一次
+   满足改条件时,prime[j]必定是prime[j]*i的最小因子。 */
+ 
+    bool vis[maxn+5];
+    int prime[maxn+5];
+    void isprime()
+    {
+        memset(vis,0,sizeof(vis));
+        int cnt=0;
+        for(int i=2;i<=maxn;i++)
+        {
+            if(!vis[i])prime[c++]=i;
+            for(int j=0;j<cnt&&prime[j]*i<=maxn;j++)
+            {
+                vis[prime[j]*i]=false;
+                if(i%prime[j]==0) //保证每个合数只会被它的最小质因数筛去，因此每个数只会被标记一次
+                    break;
+            }
+        }
+    }
+  ```
 
 ## 素性检测
 
@@ -113,7 +188,7 @@ $∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定
 * 在n较小的时候没有公式，当n较大(大于一万)
 
   $f(n)=ln(n)+C+1/(2*n)$ 
- 
+
   $C≈0.57721566490153286060651209$ 
 
   ```c++
@@ -133,7 +208,7 @@ $∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定
 
 * e、n公开，d私钥。
 
-    ​A明文，B密文 
+    A明文，B密文 
     
     $A=B^d mod n$ 
 
@@ -272,7 +347,7 @@ long long qPow(long long b,long long p,long long k){
 * 性质
   1. (a+b)%p=(a%p+b%p)%p
   2. (a-b)%p=(a%p-b%p+p)%p
-  3. (a*b)%p=((a%p)*(b%p))%p
+  3. (a\*b)%p=((a%p)*(b%p))%p
   4. (a/b)%p=((a%p)*inv(b))%p，其中inv(b)表示b%p的逆元
 
 * 求正整数a在模mod下逆元的方法
@@ -300,7 +375,7 @@ long long qPow(long long b,long long p,long long k){
 
 * 求线性同余方程a*x≡b(mod n)的最小正整数解。
   
-  解法：首先将方程改写为a*x-n*y=b的形式，然后使用拓展欧几里德求出一组特解(x0,y0)。
+  解法：首先将方程改写为a\*x-n\*y=b的形式，然后使用拓展欧几里德求出一组特解(x0,y0)。
   
   题目要求找到最小的正整数解，可以令k=n/gcd(a,n)，这样x的最小正整数解可以通过表达式x=(x0%k+k)%k求出。（x0可能是负数）
 
@@ -562,7 +637,7 @@ ll excrt(){
 	3. 3!!=720
 	4. 4!!=620448401733239439360000
 	5. 5!!很大
-   
+
 所以前面特判，后面的一定能够整除p
 
 * 阶乘末尾0的个数
@@ -771,7 +846,9 @@ int celar(int y, int m, int d)
 ## 正整数拆分
 
 设f(n,k)表示正整数n被拆成k个数的不同拆法。
+
 使用挡板法，f(n,k)=C(n-1,k-1)。
+
 所以S(n)=Σf(n,k)=ΣC(n-1,k-1)=2^(n-1)
 
 ## 小球盒子
