--- a/高精度计算/高精度计算板子.md
+++ b/高精度计算/高精度计算板子.md
@@ -1,7 +1,11 @@
+# 高精度计算
+
+# C语言
 * int的数据范围[-2^31,2^31-1(2147483647 2.1*10^9)]
 * unsigned int 4.3*10^9
 * long long [-2^63 , 2^63-1(9.2*10^18)]
 * unsigned long long 1.84*10^19 
+
 
 ```c++
 const int MAXN = 10000;
@@ -81,3 +85,10 @@ void output(BigNum A)
 	printf("\n");
 }
 ```
+
+# 进制转换
+
+
+# Python 
+
+# JAVA
