--- a/数论/数论板子.md
+++ b/数论/数论板子.md
@@ -107,10 +107,10 @@ $∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定
         int cnt=0;
         for(int i=2;i<=maxn;i++)
         {
-            if(!vis[i])prime[c++]=i;
+            if(!vis[i])prime[cnt++]=i;
             for(int j=0;j<cnt&&prime[j]*i<=maxn;j++)
             {
-                vis[prime[j]*i]=false;
+                vis[prime[j]*i]=1;
                 if(i%prime[j]==0) //保证每个合数只会被它的最小质因数筛去，因此每个数只会被标记一次
                     break;
             }
