素数筛的改正

--- a/数论/数论板子.md
+++ b/数论/数论板子.md
@@ -58,7 +58,8 @@ $∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定
   ```
 * 普通筛——埃拉托斯特尼(Eratosthenes)筛法:时间复杂度O(nloglogn)
   ```c++
-    bool vis[maxn+5];
+    const int maxn=1e6+5;
+    int vis[maxn+5];
     void isprime()
     {
         memset(vis,0,sizeof(vis));
@@ -66,8 +67,9 @@ $∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定
         {
             if(!vis[i])
             {
-                for(int j=2;j*i<=N;j++)
-                    vis[i*j]=false;
+                printf("%d\n",i);
+                for(int j=2;j*i<=maxn;j++)
+                    vis[i*j]=1;
             }
         }
     }
@@ -76,20 +78,23 @@ $∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定
   或者
 
   ```c++
-    bool vis[maxn+5];
+    
+    const int maxn=1e6+5;
+    int vis[maxn+5];
     void isprime()
     {
         memset(vis,0,sizeof(vis));
-        for(int i=2;i<=sqrt(N);i++)
+        for(int i=2;i<=sqrt(maxn);i++)
         {
             if(!vis[i])
             {
-                for(j=i*i;j<=N;j+=i)
-                    vis[j]=false;
+                printf("%d\n",i);
+                for(int j=i*i;j<=maxn;j+=i)vis[j]=1;
                 //二次筛选法:i是素数，则下一个起点是i*i,把后面的所有的i*i+2*n*i筛掉
             }
         }
     }
+    
   ```
 
 * 线性筛——欧拉Euler筛:时间复杂度为O(n)
@@ -99,20 +104,16 @@ $∑(1+q^1+q^2+…+q^n)modp$ 已知q,p,n都很大可以到10^9，且q,p不一定
    [j+1]=k’*prime[j]，接下去的素数同理。所以不用筛下去了。因此，在满足i%prime[j]==0这个条件之前以及第一次
    满足改条件时,prime[j]必定是prime[j]*i的最小因子。 */
  
-    bool vis[maxn+5];
-    int prime[maxn+5];
-    void isprime()
-    {
+    const int maxn=1e6+5;
+    int vis[maxn],pri[maxn],cnt;
+    void isprime(){
         memset(vis,0,sizeof(vis));
-        int cnt=0;
-        for(int i=2;i<=maxn;i++)
-        {
-            if(!vis[i])prime[cnt++]=i;
-            for(int j=0;j<cnt&&prime[j]*i<=maxn;j++)
-            {
-                vis[prime[j]*i]=1;
-                if(i%prime[j]==0) //保证每个合数只会被它的最小质因数筛去，因此每个数只会被标记一次
-                    break;
+        cnt=0;
+        for(int i=2;i<=maxn;i++){
+            if(!vis[i])pri[cnt++]=i;
+            for(int j=0;j<cnt&&pri[j]*i<=maxn;j++){
+                vis[pri[j]*i]=1;
+                if(i%pri[j]==0)break;
             }
         }
     }
