--- a/高精度计算/高精度计算板子.md
+++ b/高精度计算/高精度计算板子.md
@@ -220,21 +220,24 @@ BigNum divide(BigNum A,int b,int &rest){
 // 高精度除以高精度
 
 ```
-## 高精度取余
-
-
-## 高精度阶乘
-
 
 ## 高精度小数
 ![高精度小数](img/高精度小数.png)
 
 # 进制转换
 
+* 结构体
+  ![进制转化](img/进制转换1.png)
+* 将10进制转化为R进制
+  ![10->R](img/10进制转化为R进制.png)
+* 将R进制转化为10进制
+  ![R->10](img/R进制转换成10进制.png)
 
 # Python 
+![python高精度](img/python高精度.png)
 
 # JAVA
+![JAVA高精度](img/Java高精度.png)
 
 * Java语言的math包里有BigInteger类和BigDecimal类，在ACM比赛中可以直接调用类里封装好的函数。
 * 注意：Java有时会把较大的实数以科学计数法的形式输出。
@@ -259,3 +262,47 @@ BigNum divide(BigNum A,int b,int &rest){
 			}
 	}
   ```
+# 输入输出外挂
+![输入输出外挂](img/输入输出外挂.png)
+
+```c++
+namespace fastIO{
+	const int BUF_SIZE=4e7; // 估算输入数据的大小，每个char占1个字节。
+	char buf[BUF_SIZE];
+	int _fc,_fsize;
+	// 注意要在main()函数的最开始加入begin()函数。
+	void begin(){
+		_fc=0;
+		_fsize=fread(buf,1,BUF_SIZE,stdin);
+	}
+	template<typename T>
+	inline bool read(T &t){
+		while(_fc<_fsize && buf[_fc]!='-' && (buf[_fc]<'0'||buf[_fc]>'9')) _fc++;
+		if(_fc>=_fsize) return false;
+		bool sgn=0; if(buf[_fc]=='-'){ sgn=1; _fc++; }
+		for(t=0;_fc<_fsize&&'0'<=buf[_fc]&&buf[_fc]<='9';_fc++) t=t*10+buf[_fc]-'0';
+		if(sgn) t=-t;
+		return true;
+	}
+	template<typename T>
+	void print(T x){
+  		static char _ss[33],*st; st=_ss;
+ 		if(!x) *st++='0';
+		if(x<0){ putchar('-'); x=-x;}
+ 		while(x){ *st++=('0'+x%10); x/=10; }
+		while((st--)!=_ss) putchar(*st);
+		return ;
+	}
+	inline bool reads(char _ss[]){
+		while(_fc<_fsize && (buf[_fc]==' ' || buf[_fc]=='\n')) _fc++;
+		if(_fc>=_fsize) return false;
+		int len=0;
+		for(len=0;_fc<_fsize&&buf[_fc]!=' '&&buf[_fc]!='\n';_fc++)
+			_ss[len++]=buf[_fc];
+		_ss[len]='\0';
+		return true;
+	}
+}
+using namespace fastIO;
+
+```
