--- a/高精度计算/高精度计算板子.md
+++ b/高精度计算/高精度计算板子.md
@@ -266,6 +266,27 @@ BigNum divide(BigNum A,int b,int &rest){
 ![输入输出外挂](img/输入输出外挂.png)
 
 ```c++
+int scan()///输入外挂
+{
+    int res=0,ch,flag=0;
+    if((ch=getchar())=='-')
+        flag=1;
+    else if(ch>='0'&&ch<='9')
+        res=ch-'0';
+    while((ch=getchar())>='0'&&ch<='9')
+        res=res*10+ch-'0';
+    return flag?-res:res;
+}
+
+void out(LL a)///输出外挂
+{
+    if(a>9)
+        Out(a/10);
+    putchar(a%10+'0');
+}
+```
+
+```c++
 namespace fastIO{
 	const int BUF_SIZE=4e7; // 估算输入数据的大小，每个char占1个字节。
 	char buf[BUF_SIZE];
